--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # Homebrew setup prerequisites.
 
-- name: Ensure Homebrew parent directory has correct permissions (on High Sierra).
+- name: Ensure Homebrew parent directory has correct permissions (on High Sierra)
   file:
     path: "{{ homebrew_prefix }}"
     owner: "{{ homebrew_prefix_owner }}"
@@ -9,7 +9,7 @@
   become: yes
   when: "ansible_distribution_version.startswith('10.13')"
 
-- name: Ensure Homebrew parent directory has correct permissions (on non-'High Sierra' versions of Mac OS X).
+- name: Ensure Homebrew parent directory has correct permissions (on non-'High Sierra' versions of Mac OS X)
   file:
     path: "{{ homebrew_prefix }}"
     owner: "{{ homebrew_prefix_owner }}"
@@ -19,7 +19,7 @@
   become: yes
   when: "not ansible_distribution_version.startswith('10.13')"
 
-- name: Ensure Homebrew directory exists.
+- name: Ensure Homebrew directory exists
   file:
     path: "{{ homebrew_install_path }}"
     owner: "{{ homebrew_install_path_owner }}"
@@ -29,7 +29,7 @@
   become: yes
 
 # Clone Homebrew.
-- name: Ensure Homebrew is installed.
+- name: Ensure Homebrew is installed
   git:
     repo: "{{ homebrew_repo }}"
     version: master
@@ -39,7 +39,7 @@
     depth: 1
 
 # Adjust Homebrew permissions.
-- name: Ensure proper permissions and ownership on homebrew_brew_bin_path dirs.
+- name: Ensure proper permissions and ownership on homebrew_brew_bin_path dirs
   file:
     path: "{{ homebrew_brew_bin_path }}"
     state: directory
@@ -48,7 +48,7 @@
     mode: 0775
   become: yes
 
-- name: Ensure proper ownership on homebrew_install_path subdirs.
+- name: Ensure proper ownership on homebrew_install_path subdirs
   file:
     path: "{{ homebrew_install_path }}"
     state: directory
@@ -58,12 +58,12 @@
   become: yes
 
 # Place brew binary in proper location and complete setup.
-- name: Check if homebrew binary is already in place.
+- name: Check if homebrew binary is already in place
   stat:
     path: "{{ homebrew_brew_bin_path }}/brew"
   register: homebrew_binary
 
-- name: Symlink brew to homebrew_brew_bin_path.
+- name: Symlink brew to homebrew_brew_bin_path
   file:
     src: "{{ homebrew_install_path }}/bin/brew"
     dest: "{{ homebrew_brew_bin_path }}/brew"
@@ -71,12 +71,12 @@
   when: homebrew_binary.stat.exists == false
   become: yes
 
-- name: Force update brew after installation.
+- name: Force update brew after installation
   command: "{{ homebrew_brew_bin_path }}/brew update --force"
   when: homebrew_binary.stat.exists == false
 
 # Tap.
-- name: Ensure configured taps are tapped.
+- name: Ensure configured taps are tapped
   brew_tap:
     tap: "{{ item }}"
     state: present
@@ -84,13 +84,13 @@
   with_items: "{{ homebrew_taps }}"
 
 # Cask.
-- name: Ensure Cask tap is tapped.
+- name: Ensure Cask tap is tapped
   brew_tap:
     tap: caskroom/cask
     state: present
     path: "{{ homebrew_brew_bin_path }}"
 
-- name: Install configured cask applications.
+- name: Install configured cask applications
   homebrew_cask:
     name: "{{ item }}"
     state: present
@@ -99,13 +99,13 @@
   with_items: "{{ homebrew_cask_apps }}"
 
 # Brew.
-- name: Ensure Homebrew Core tap is tapped.
+- name: Ensure Homebrew Core tap is tapped
   brew_tap:
     tap: homebrew/core
     state: present
     path: "{{ homebrew_brew_bin_path }}"
 
-- name: Ensure configured homebrew packages are installed.
+- name: Ensure configured homebrew packages are installed
   homebrew:
     name: "{{ item.name | default(item) }}"
     install_options: "{{ item.install_options | default(omit) }}"
@@ -113,25 +113,25 @@
     path: "{{ homebrew_brew_bin_path }}"
   with_items: "{{ homebrew_installed_packages }}"
 
-- name: Ensure blacklisted homebrew packages are not installed.
+- name: Ensure blacklisted homebrew packages are not installed
   homebrew:
     name: "{{ item }}"
     state: absent
     path: "{{ homebrew_brew_bin_path }}"
   with_items: "{{ homebrew_uninstalled_packages }}"
 
-- name: Upgrade all homebrew packages (if configured).
+- name: Upgrade all homebrew packages (if configured)
   homebrew:
     update_homebrew: True
     upgrade_all: "{{ homebrew_upgrade_all_packages }}"
     path: "{{ homebrew_brew_bin_path }}"
   when: homebrew_upgrade_all_packages
 
-- name: Check for Brewfile.
+- name: Check for Brewfile
   stat:
     path: "{{ homebrew_brewfile_dir }}/Brewfile"
   register: homebrew_brewfile
 
-- name: Install from Brewfile.
+- name: Install from Brewfile
   command: "{{ homebrew_brew_bin_path}}/brew bundle chdir={{ homebrew_brewfile_dir }}"
   when: homebrew_brewfile.stat.exists and homebrew_use_brewfile
