--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,23 +1,12 @@
 ---
 # Homebrew setup prerequisites.
 
-- name: Ensure Homebrew parent directory has correct permissions (on High Sierra)
+- name: Ensure Homebrew parent directory has correct permissions
   file:
     path: "{{ homebrew_prefix }}"
     owner: "{{ homebrew_prefix_owner }}"
     state: directory
   become: yes
-  when: "ansible_distribution_version.startswith('10.13')"
-
-- name: Ensure Homebrew parent directory has correct permissions (on non-'High Sierra' versions of Mac OS X)
-  file:
-    path: "{{ homebrew_prefix }}"
-    owner: "{{ homebrew_prefix_owner }}"
-    group: "{{ homebrew_prefix_group }}"
-    state: directory
-    mode: 0775
-  become: yes
-  when: "not ansible_distribution_version.startswith('10.13')"
 
 - name: Ensure Homebrew directory exists
   file:
